GNOME Bugzilla – Bug 771817
dx9screencapsrc: throw error for invalid screen index
Last modified: 2016-09-30 07:05:47 UTC
Created attachment 336062 [details] [review] [PATCH] dx9screencapsrc: throw error for invalid screen index Currently dx9screencapsrc prints a verbose warning in case the screen index is out of range for the current number of detected monitors. This value is then dropped. However there is no initial indication (beside the console print) if it worked or not. This may result in capturing an unwanted screen as it would capture the last set index that was not rejected. This patch sets the index regardless. Instead, the element throws an error when it tries to run or getting caps for an invalid index. I think this is more in line with how the avfvideosrc and ksvideosrc elements work where these kind of errors are received on the pipeline's bus.
commit 1489e73df4ec06257d4e56f10f713a8a83bd56cc Author: Florian Zwoch <fzwoch@gmail.com> Date: Thu Sep 22 10:55:03 2016 +0200 dx9screencapsrc: throw error for invalid screen index Currently dx9screencapsrc prints a verbose warning in case the screen index is out of range for the current number of detected monitors. This value is then dropped. However there is no initial indication (beside the console print) if it worked or not. This may result in capturing an unwanted screen as it would capture the last set index that was not rejected. This patch sets the index regardless. Instead, the element throws an error when it tries to run or getting caps for an invalid index. https://bugzilla.gnome.org/show_bug.cgi?id=771817